# TRPO-2018-games-library

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: bulls.c  bulls.h  main.c  matches.c  matches.h
test/: games_test.c
